# KSP-Korean-Localization

./: .gitattributes  .gitignore  CLAUDE.md  KSP-Korean-Localization.sln  LICENSE  README.md  install.cmd  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-translation-error.yml  2-font-rendering.yml  3-bug.yml  4-suggestion.yml  config.yml
.github/workflows/: build.yml
GameData/KSPKorean/: KSPKorean.version.versiontemplate
GameData/KSPKorean/Localization/: BreakingGround.ko.cfg  dictionary.ko.cfg
KSPKorean/: KSPKorean.csproj  Localization.cs
KSPKorean/Properties/: AssemblyInfo.cs
docs/: glossary.md  ingame-checklist.md  review-checklist.md
reference_english/: BreakingGround.en.cfg
scripts/: build_font.py  extract_glossary.py  ksploc.py  untranslated.py  validate.py
